[package]
name = "puddle"
version = "0.1.0"
authors = ["Alexander Liesenfeld <alexander.liesenfeld@outlook.com>"]
edition = "2018"
description = "A simple object pool implementation that uses asynchronous synchronization primitives only."
readme = "README.md"
keywords = ["object-pool", "async",  "pool", "asynchronous"]
categories = ["asynchronous"]
license = "MIT"
repository = "https://github.com/alexliesenfeld/puddle"

[dependencies]
async-std = {version = "1.6.2", features = ["unstable"] }
